--- a/global.css
+++ b/global.css
@@ -1,4 +1,4 @@
-header, footer {
+header,footer{
   height: 10vh;
   width: 100%;
 }
@@ -7,12 +7,14 @@ main {
   height: 80vh;
 }
 
+
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   background-color: rgb(33,37,41);
+  margin-top: auto;
 }
 
 h1{
@@ -21,3 +23,13 @@ h1{
   margin-top: 20px;
 }
 
+
+table{
+  border: 1px solid;
+  border-color: black !important;
+}
+
+tbody, td, th, tr {
+  border: 0 solid;
+  border-color: black;
+}
