--- a/global.css
+++ b/global.css
@@ -7,14 +7,13 @@ main {
   height: 80vh;
 }
 
-
 footer {
   display: flex;
   justify-content: center;
   align-items: center;
   color: white;
   background-color: rgb(33,37,41);
-  margin-top: auto;
+  margin-bottom: auto;
 }
 
 h1{
@@ -22,7 +21,6 @@ h1{
   margin-left: 10px ;
   margin-top: 20px;
 }
-
 
 table{
   border: 1px solid;
